# brutils-python

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_EN.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  CORE_TEAM.md  CORE_TEAM_EN.md  LICENSE  LICENSE.txt  MAINTAINING.md  Makefile  README.md  README_EN.md  README_PT_BR.md  cobertura.txt  codecov.yml  make.bat  pyproject.toml  requirements-dev.txt  resultado_testes.txt  setup.py
.githooks/: pre-push
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: nova-funcionalidade-🌟.md  reportar-um-bug-🐛.md
.github/workflows/: check-issue-linked.yml  check-lint.yml  cleanup-inactive-issues.yml  comment-commands.yml  create-release-pr.yml  publish-to-production.yml  pull_request_template.md  run-oi-mah.yml  run-tests.yml  stale.yml  update-changelog.yml
brutils/: __init__.py  boleto.py  cep.py  cnh.py  cnpj.py  cpf.py  currency.py  date.py  date_utils.py  email.py  legal_nature.py  legal_process.py  license_plate.py  logger.py  natureza_juridica.py  passport.py  phone.py  pis.py  renavam.py  rg.py  tin.py  titulo_eleitoral.py  voter_id.py  voter_registration.py
brutils/assets/: legal_process_ids.py
brutils/data/: cities_code.json  dddBrasil.json  legal_process_ids.json
brutils/data/enums/: __init__.py  better_enum.py  boleto.py  months.py  uf.py
brutils/exceptions/: __init__.py  cep.py  cnpj.py
brutils/ibge/: municipality.py  uf.py
brutils/types/: __init__.py  address.py  boleto.py  cep.py  cnpj.py
brutils/worlds_nif/: nif-haiti.py  nif-portugal.py  tin_australia.py  tin_austria.py  tin_belgium.py  tin_cabo_verde.py  tin_el_salvador.py  tin_germany.py  tin_ghana.py  tin_haiti.py  tin_israel.py  tin_japan.py  tin_lebanon.py  tin_nigeria.py  tin_pakistan.py  tin_paraguay.py  tin_poland.py  tin_portugal.py  tin_russia.py  tin_senegal.py  tin_south_korea.py  tin_spain.py  tin_taiwan.py  tin_united_arab_emirates.py  tin_united_kingdom.py  tin_uruguay.py
brutils/worlds_tin/: tin_angola.py  tin_anguilla.py  tin_australia.py  tin_austria.py  tin_belgium.py  tin_cabo_verde.py  tin_canada.py  tin_el_salvador.py  tin_germany.py  tin_ghana.py  tin_haiti.py  tin_israel.py  tin_japan.py  tin_lebanon.py  tin_nigeria.py  tin_pakistan.py  tin_paraguay.py  tin_poland.py  tin_portugal.py  tin_russia.py  tin_senegal.py  tin_spain.py  tin_taiwan.py  tin_united_arab_emirates.py  tin_united_kingdom.py  tin_united_states_of_america.py  tin_uruguay.py  tin_venezuela.py
documentation v1.0.1/: ENGLISH_VERSION.md  PORTUGUESE_VERSION.md
old_versions_documentation/: README.md
old_versions_documentation/v1.0.1/: ENGLISH_VERSION.md  PORTUGUESE_VERSION.md
scripts/: make-format.sh
tests/: test_boleto.py  test_cep.py  test_cnh.py  test_cnpj.py  test_cpf.py  test_currency.py  test_date.py  test_date_utils.py  test_email.py  test_import.py  test_imports.py  test_legal_process.py  test_license_plate.py  test_license_plate_old_format.py  test_municipality.py  test_natureza_juridica.py  test_passport.py  test_phone.py  test_phone_mcdc.py  test_pis.py  test_renavam.py  test_rg.py  test_situation.py  test_tin_angola.py  test_titulo_eleitoral.py  test_voter_id.py  test_voter_registration.py
tests/ibge/: municipality.py  test_municipality.py  test_uf.py
tests/license_plate/: test_is_valid.py  test_license_plate.py
tests/phone/: test_ddd.py  test_is_valid.py  test_phone.py
tests/worlds_tin/: test_angola_tin.py  test_anguilla_tin.py  test_australia_tin.py  test_united_states_tin.py  test_venezuela_tin.py
worlds_nif/: nif-haiti.py  nif-portugal.py
