[tool.poetry]
name = "brutils"
version = "2.0.0"
description = "Utils library for specific Brazilian businesses"
authors = ["The Brazilian Utils Organization"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/brazilian-utils/brutils"
keywords = ["cpf", "cnpj", "cep", "document", "validation", "brazil", "brazilian"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business",
  "Topic :: Software Development :: Internationalization",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Natural Language :: English",
  "Natural Language :: Portuguese",
  "Natural Language :: Portuguese (Brazilian)"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.test.dependencies]
coverage = "^7.2.7"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
